@@ -1,18 +1,17 @@
 package com.github.starhq.template.mapper;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import java.time.OffsetDateTime;
-
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.github.starhq.template.BaseMapperTest;
 import com.github.starhq.template.entity.SysToken;
-import com.github.starhq.template.vo.TokenVO;
+import com.github.starhq.template.model.vo.token.TokenPageVO;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+
+import java.time.OffsetDateTime;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 class TokenMapperTest extends BaseMapperTest {
 
@@ -21,7 +20,7 @@ class TokenMapperTest extends BaseMapperTest {
 
     @Test
     void insertToken_shouldInsertSuccessfully() {
-        SysToken token = prepare(1L, 1L);
+        SysToken token = prepare(1L);
         int result = tokenMapper.insert(token);
 
         assertThat(result).isEqualTo(1);
@@ -34,24 +33,25 @@ class TokenMapperTest extends BaseMapperTest {
 
     @Test
     void selectTokenPage_shouldReturnPagedResult() {
-        SysToken token = prepare(2L, 1L);
+        SysToken token = prepare(2L);
         tokenMapper.insert(token);
 
-        Page<TokenVO> page = new Page<>(1, 10);
-        QueryWrapper<TokenVO> wrapper = new QueryWrapper<>();
+        Page<TokenPageVO> page = new Page<>(1, 10);
+        QueryWrapper<TokenPageVO> wrapper = new QueryWrapper<>();
+        wrapper.likeRight("u.username", "admin");
         wrapper.orderBy(true, false, "id");
 
-        IPage<TokenVO> result = tokenMapper.selectTokenPage("admin", page, wrapper);
+        IPage<TokenPageVO> result = tokenMapper.selectTokenPage(page, wrapper);
 
         assertThat(result).isNotNull();
         assertThat(result.getTotal()).isGreaterThan(0);
         assertThat(result.getRecords()).hasSize(1);
-        assertThat(result.getRecords().get(0).getUsername()).isEqualTo("admin");
+        assertThat(result.getRecords().getFirst().getUsername()).isEqualTo("admin");
     }
 
     @Test
     void findByUserId_shouldReturnUser() {
-        SysToken token = prepare(3L, 1L);
+        SysToken token = prepare(3L);
         tokenMapper.insert(token);
 
         QueryWrapper<SysToken> wrapper = new QueryWrapper<>();
@@ -65,7 +65,7 @@ class TokenMapperTest extends BaseMapperTest {
 
     @Test
     void deleteToken_shouldDeleteSuccessfully() {
-        SysToken token = prepare(4L, 1L);
+        SysToken token = prepare(4L);
         tokenMapper.insert(token);
 
         int result = tokenMapper.deleteById(token.getId());
@@ -76,7 +76,20 @@ class TokenMapperTest extends BaseMapperTest {
         assertThat(dbToken).isNull();
     }
 
-    private SysToken prepare(Long id, Long userID) {
+    @Test
+    void upsertToken_shouldUpsertSuccessfully() {
+        SysToken token = prepare(4L);
+        tokenMapper.upsertToken(token);
+
+        token.setAccessToken("upsert_token");
+        tokenMapper.upsertToken(token);
+
+        SysToken dbToken = tokenMapper.selectById(token.getId());
+        assertThat(dbToken).isNotNull();
+        assertThat(dbToken.getAccessToken()).isEqualTo("upsert_token");
+    }
+
+    private SysToken prepare(Long id) {
         SysToken token = new SysToken();
         token.setAccessToken("access_token");
         token.setRefreshToken("refresh_token");
@@ -84,7 +97,7 @@ class TokenMapperTest extends BaseMapperTest {
         token.setDeviceFingerprint("whatever");
         token.setExpiredAt(OffsetDateTime.now());
         token.setId(id);
-        token.setUserId(userID);
+        token.setUserId(1L);
         token.setRevoked(false);
         token.setLoginIp("127.0.0.1");
         return token;
